Добавлен API gateway, todo настроить api gateway для web sockets, добавить везде обработчики исключений + рефакторинг, добавить прокси загрузку файлов